src/modules/shared/components/Blade/Blade.module.scss
@use "sass:map";
@use "sass:math";
@use "src/styles/abstracts" as *;

$sticky-background: $platinum;
$padding-horizontal: $spacer-lg;
$padding-horizontal-mobile: $spacer-sm;

.c-blade {
	background-color: $white;
	color: $black;
	bottom: 0;
	display: grid;
	grid-template-rows: auto auto 1fr auto;
	margin-left: 4rem;
	max-height: 100%;
	width: 100%;
	pointer-events: none;
	position: fixed;
	right: 0;
	top: 0;
	transform: translateX(100%);
	transition:
		transform $animate-default,
		visibility $animate-default;
	visibility: hidden;
	z-index: get-z-layer("blade");

	&:not(.c-blade--extra-wide){
		max-width: $blade-max-width;
	}

	&.c-blade--extra-wide{
		max-width: 90%;


		@media (max-width: $breakpoint-sm) {
			max-width: 100%;
		}
	}

	&__content-standalone {
		display: flex;
		flex-direction: column;
		width: 100%;
		max-width: $blade-max-width;
		background-color: $white;
		color: $black;
		border-left: 1px solid $silver;
		max-height: calc($view-height - #{$c-navigation-height-md});

		@media (min-width: $breakpoint-md) {
			max-height: calc($view-height - #{$c-navigation-height});
		}
	}

	&__top-bar-container {
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		align-items: center;
		min-height: $padding-horizontal;

		&.c-blade__content-scrolled {
			background: $sticky-background;
		}

		@media (max-width: $breakpoint-md) {
			min-height: $padding-horizontal-mobile;
		}
	}

	&__close-button {
		grid-row-start: 1;
		justify-self: flex-end;
		margin: 2rem;
		z-index: get-z-layer("blade");
		box-shadow: none !important;

		&:only-child {
			margin-left: auto;
		}

		@media (max-width: $breakpoint-md) {
			margin: auto 0 auto auto;
		}
	}

	&__title {
		color: $black;
		padding: 0 $padding-horizontal $spacer-sm;
		word-break: break-word;

		&-extra-wide {
			padding: $padding-horizontal $padding-horizontal $spacer-sm;

			.c-blade__title--mobile-wrapper {
				display: flex;
				padding:0;
			}

			.c-blade__close-button {
				margin: auto 0 auto auto;
			}
		}

		@media (max-width: $breakpoint-md) {
			padding: $padding-horizontal-mobile;

			&--mobile-wrapper {
				display: flex;
				padding:0;
			}
		}

		&.c-blade__content-scrolled {
			border-bottom: $divider-grey;
			background: $sticky-background;
		}

		&--text {
			line-height: $line-height-lg;
			font-size: $font-size-lg;

			@media (max-width: $breakpoint-md) {
				display: flex;
			}
		}

		&--sticky-subtitle, &--subtitle {
			padding-top: $spacer-sm;

			@media (max-width: $breakpoint-md) {
				padding-top: $spacer-xs;
			}
		}
	}

	&__body-wrapper {
		grid-row-start: 3;
		overflow: hidden auto;
		display: flex;
		height: 100%;
		flex-direction: column;
		justify-content: space-between;

		div {
			white-space: pre-line;
		}

		&--subtitle {
			padding-bottom: $padding-horizontal-mobile;
		}

		&--content {
			padding: $spacer-md $padding-horizontal;

			@media (max-width: $breakpoint-md) {
				padding: $padding-horizontal-mobile;
			}
		}
	}

	&__footer {
		grid-row-start: 4;
		gap: $spacer-xs;
		border-top: $divider-grey;
		background: $sticky-background;
		padding: $spacer-sm $padding-horizontal;

		@media (max-width: $breakpoint-md) {
			padding: $padding-horizontal-mobile;
		}

		&-buttons {
			padding: 0;
			display: flex;
			flex-direction: column;
			align-content: flex-end;
			gap: $spacer-xs;

			&-extra-wide {
				flex-direction: row-reverse;
				justify-content: space-between;

				:global(.c-button) {
					display: inline-block;
					width: unset;
				}
			}

			@media (max-width: $breakpoint-md) {
				flex-direction: row-reverse;
				justify-content: space-between;
			}

			&:not(&-extra-wide){
				:global(.c-button) {
					display: block;
					width: 100%;

					@media (max-width: $breakpoint-md) {
						display: inline-block;
						width: unset;

						&:only-child {
							display: block;
							width: 100%;
						}
					}
				}
			}
		}

		:global(.c-button--primary):hover {
			background-color: $white;
			color: $teal-dark;
			border: 1px solid $teal-dark;

			&:hover{
				background-color: $white;
				color: $teal-dark;
				border: 1px solid $teal-dark;
			}
		}

		:global(.c-button--secondary) {
			background-color: $cherry;
			border: 1px solid $cherry;

			&:hover{
				background-color: $white;
				color: $cherry;
				border: 1px solid $cherry;
			}
		}
	}

	&__overlay {
		z-index: get-z-layer("blade") !important;

		&--managed {
			left: auto !important;
			transform: translateX(5.6rem);
			transition:
				opacity $timing-default linear,
				transform $animate-default;
			width: calc($blade-max-width + 5.6rem);
		}
	}

	&--visible {
		pointer-events: all;
		transform: translateX(0);
		visibility: visible;
	}

	&--managed {
		width: 100%;
	}
}

